--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: mail@example.com
+email: hkoytak@syr.edu
 contact_links:
 #  - icon: comments
 #    icon_pack: fas
