--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,12 +10,9 @@ main:
   - name: People
     url: people
     weight: 30
-  - name: Events
-    url: event
+  - name: Projects
+    url: projects
     weight: 40
-  - name: Publications
-    url: publication
-    weight: 50
   - name: Contact
     url: contact
     weight: 60
