--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: people
     weight: 30
   - name: Projects
-    url: projects
+    url: events
     weight: 40
   - name: Contact
     url: contact
